<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="50dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

             <ToggleButton
                android:id="@+id/ToggleButton01"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="30sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_1"
                android:textOn="@string/dip_sw_1" />
 
            <ToggleButton
                android:id="@+id/ToggleButton02"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="30sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_2"
                android:textOn="@string/dip_sw_2" />

            <ToggleButton
                android:id="@+id/ToggleButton03"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="30sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_3"
                android:textOn="@string/dip_sw_3" />

            <ToggleButton
                android:id="@+id/ToggleButton04"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="30sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_4"
                android:textOn="@string/dip_sw_4" />

            <ToggleButton
                android:id="@+id/ToggleButton05"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="30sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_5"
                android:textOn="@string/dip_sw_5" />

            <ToggleButton
                android:id="@+id/ToggleButton06"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="30sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_6"
                android:textOn="@string/dip_sw_6" />

            <ToggleButton
                android:id="@+id/ToggleButton07"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="30sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_7"
                android:textOn="@string/dip_sw_7" />

       		<ToggleButton
            	android:id="@+id/ToggleButton08"
                android:clickable="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textSize="30sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_off_30x30"
                android:textColor="@android:color/white"
                android:textOff="@string/dip_sw_8"
                android:textOn="@string/dip_sw_8" />

       		<ToggleButton
       		    android:id="@+id/ToggleButton09"
       		    android:layout_width="0dp"
       		    android:layout_height="wrap_content"
       		    android:layout_margin="2dp"
       		    android:layout_weight="1"
       		    android:background="@drawable/buttons_off_30x30"
       		    android:clickable="false"
       		    android:minHeight="0dp"
       		    android:minWidth="0dp"
       		    android:textColor="@android:color/white"
       		    android:textOff="@string/dip_sw_9"
       		    android:textOn="@string/dip_sw_9"
       		    android:textSize="30sp" />
            
        </LinearLayout>

    </LinearLayout>

</LinearLayout>